# EconJobMarket

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: programs_review.csv  universities.csv
data/: placements.db
data/imports/: all_placements.jsonl
sql/ddl/: 001_schema.sql  010_tables_raw.sql  020_tables_staging.sql  030_tables_core.sql  040_indexes.sql  050_seed_data.sql  055_seed_top50.sql
src/: __main__.py  database.py  export_sqlite.py  scraper.py  utils.py
src/importers/: econphdplacements.py  gap_report.py
src/migrations/: __init__.py  base.py  m001_baseline.py  m002_programs.py  runner.py
src/parsers/: __init__.py  arizona.py  arizona_state.py  base.py  bc.py  berkeley.py  bostonu.py  brandeis.py  brown.py  caltech.py  carnegie_mellon.py  chicago.py  claremont.py  colorado.py  columbia.py  cornell.py  cuny.py  duke.py  emory.py  florida.py  florida_state.py  georgetown.py  georgia.py  georgia_state.py  georgia_tech.py  gwu.py  harvard.py  indiana.py  iowa.py  iowa_state.py  jhu.py  maryland.py  michigan.py  michigan_state.py  minnesota.py  mit.py  nc_state.py  northwestern.py  notre_dame.py  nyu.py  (+37 more)
src/tools/: batch_generate.py  generate_parser.py  generate_seed_sql.py  parser_prompt.txt  test_parser.py
