[project]
name = "econ-job-market"
version = "0.1.0"
description = "Scraper and database for economics PhD placement data"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9,<3",
    "requests>=2.31,<3",
    "beautifulsoup4>=4.12,<5",
    "python-dotenv>=1.0,<2",
    "anthropic>=0.40,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
ejm = "src.__main__:main"
