[project]
name = "econ-job-market"
version = "0.1.0"
description = "Scraper and database for economics PhD placement data"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3",
    "beautifulsoup4>=4.12,<5",
    "anthropic>=0.40,<1",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
ejm = "src.__main__:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["src/parsers", "src/tools"]  # generated parsers and utility scripts have loose typing
